typescript/checker/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts.stderr
error: TS2363 {
    span: Span {
        lo: BytePos(
            12,
        ),
        hi: BytePos(
            20,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:1:13
  |
1 | var a = 1 - `${ 3 }`;
  |             ^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            35,
        ),
        hi: BytePos(
            44,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:2:13
  |
2 | var b = 1 - `2${ 3 }`;
  |             ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            59,
        ),
        hi: BytePos(
            68,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:3:13
  |
3 | var c = 1 - `${ 3 }4`;
  |             ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            83,
        ),
        hi: BytePos(
            93,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:4:13
  |
4 | var d = 1 - `2${ 3 }4`;
  |             ^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            104,
        ),
        hi: BytePos(
            112,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:5:9
  |
5 | var e = `${ 3 }` - 5;
  |         ^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            127,
        ),
        hi: BytePos(
            136,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:6:9
  |
6 | var f = `2${ 3 }` - 5;
  |         ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            151,
        ),
        hi: BytePos(
            160,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:7:9
  |
7 | var g = `${ 3 }4` - 5;
  |         ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            175,
        ),
        hi: BytePos(
            185,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:8:9
  |
8 | var h = `2${ 3 }4` - 5;
  |         ^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            207,
        ),
        hi: BytePos(
            215,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:10:14
   |
10 | var a2 = 1 * `${ 3 }`;
   |              ^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            231,
        ),
        hi: BytePos(
            240,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:11:14
   |
11 | var b2 = 1 * `2${ 3 }`;
   |              ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            256,
        ),
        hi: BytePos(
            265,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:12:14
   |
12 | var c2 = 1 * `${ 3 }4`;
   |              ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            281,
        ),
        hi: BytePos(
            291,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:13:14
   |
13 | var d2 = 1 * `2${ 3 }4`;
   |              ^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            303,
        ),
        hi: BytePos(
            311,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:14:10
   |
14 | var e2 = `${ 3 }` * 5;
   |          ^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            327,
        ),
        hi: BytePos(
            336,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:15:10
   |
15 | var f2 = `2${ 3 }` * 5;
   |          ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            352,
        ),
        hi: BytePos(
            361,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:16:10
   |
16 | var g2 = `${ 3 }4` * 5;
   |          ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            377,
        ),
        hi: BytePos(
            387,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:17:10
   |
17 | var h2 = `2${ 3 }4` * 5;
   |          ^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            409,
        ),
        hi: BytePos(
            417,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:19:14
   |
19 | var a3 = 1 & `${ 3 }`;
   |              ^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            433,
        ),
        hi: BytePos(
            442,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:20:14
   |
20 | var b3 = 1 & `2${ 3 }`;
   |              ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            458,
        ),
        hi: BytePos(
            467,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:21:14
   |
21 | var c3 = 1 & `${ 3 }4`;
   |              ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            483,
        ),
        hi: BytePos(
            493,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:22:14
   |
22 | var d3 = 1 & `2${ 3 }4`;
   |              ^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            505,
        ),
        hi: BytePos(
            513,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:23:10
   |
23 | var e3 = `${ 3 }` & 5;
   |          ^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            529,
        ),
        hi: BytePos(
            538,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:24:10
   |
24 | var f3 = `2${ 3 }` & 5;
   |          ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            554,
        ),
        hi: BytePos(
            563,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:25:10
   |
25 | var g3 = `${ 3 }4` & 5;
   |          ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            579,
        ),
        hi: BytePos(
            589,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:26:10
   |
26 | var h3 = `2${ 3 }4` & 5;
   |          ^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            611,
        ),
        hi: BytePos(
            623,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:28:14
   |
28 | var a4 = 1 - `${ 3 - 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            639,
        ),
        hi: BytePos(
            652,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:29:14
   |
29 | var b4 = 1 - `2${ 3 - 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            668,
        ),
        hi: BytePos(
            681,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:30:14
   |
30 | var c4 = 1 - `${ 3 - 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            697,
        ),
        hi: BytePos(
            711,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:31:14
   |
31 | var d4 = 1 - `2${ 3 - 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            723,
        ),
        hi: BytePos(
            735,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:32:10
   |
32 | var e4 = `${ 3 - 4 }` - 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            751,
        ),
        hi: BytePos(
            764,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:33:10
   |
33 | var f4 = `2${ 3 - 4 }` - 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            780,
        ),
        hi: BytePos(
            793,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:34:10
   |
34 | var g4 = `${ 3 - 4 }5` - 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            809,
        ),
        hi: BytePos(
            823,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:35:10
   |
35 | var h4 = `2${ 3 - 4 }5` - 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            845,
        ),
        hi: BytePos(
            857,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:37:14
   |
37 | var a5 = 1 - `${ 3 * 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            873,
        ),
        hi: BytePos(
            886,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:38:14
   |
38 | var b5 = 1 - `2${ 3 * 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            902,
        ),
        hi: BytePos(
            915,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:39:14
   |
39 | var c5 = 1 - `${ 3 * 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            931,
        ),
        hi: BytePos(
            945,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:40:14
   |
40 | var d5 = 1 - `2${ 3 * 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            957,
        ),
        hi: BytePos(
            969,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:41:10
   |
41 | var e5 = `${ 3 * 4 }` - 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            985,
        ),
        hi: BytePos(
            998,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:42:10
   |
42 | var f5 = `2${ 3 * 4 }` - 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1014,
        ),
        hi: BytePos(
            1027,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:43:10
   |
43 | var g5 = `${ 3 * 4 }5` - 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1043,
        ),
        hi: BytePos(
            1057,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:44:10
   |
44 | var h5 = `2${ 3 * 4 }5` - 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1079,
        ),
        hi: BytePos(
            1091,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:46:14
   |
46 | var a6 = 1 - `${ 3 & 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1107,
        ),
        hi: BytePos(
            1120,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:47:14
   |
47 | var b6 = 1 - `2${ 3 & 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1136,
        ),
        hi: BytePos(
            1149,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:48:14
   |
48 | var c6 = 1 - `${ 3 & 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1165,
        ),
        hi: BytePos(
            1179,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:49:14
   |
49 | var d6 = 1 - `2${ 3 & 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1191,
        ),
        hi: BytePos(
            1203,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:50:10
   |
50 | var e6 = `${ 3 & 4 }` - 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1219,
        ),
        hi: BytePos(
            1232,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:51:10
   |
51 | var f6 = `2${ 3 & 4 }` - 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1248,
        ),
        hi: BytePos(
            1261,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:52:10
   |
52 | var g6 = `${ 3 & 4 }5` - 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1277,
        ),
        hi: BytePos(
            1291,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:53:10
   |
53 | var h6 = `2${ 3 & 4 }5` - 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1313,
        ),
        hi: BytePos(
            1325,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:55:14
   |
55 | var a7 = 1 * `${ 3 - 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1341,
        ),
        hi: BytePos(
            1354,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:56:14
   |
56 | var b7 = 1 * `2${ 3 - 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1370,
        ),
        hi: BytePos(
            1383,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:57:14
   |
57 | var c7 = 1 * `${ 3 - 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1399,
        ),
        hi: BytePos(
            1413,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:58:14
   |
58 | var d7 = 1 * `2${ 3 - 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1425,
        ),
        hi: BytePos(
            1437,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:59:10
   |
59 | var e7 = `${ 3 - 4 }` * 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1453,
        ),
        hi: BytePos(
            1466,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:60:10
   |
60 | var f7 = `2${ 3 - 4 }` * 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1482,
        ),
        hi: BytePos(
            1495,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:61:10
   |
61 | var g7 = `${ 3 - 4 }5` * 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1511,
        ),
        hi: BytePos(
            1525,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:62:10
   |
62 | var h7 = `2${ 3 - 4 }5` * 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1547,
        ),
        hi: BytePos(
            1559,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:64:14
   |
64 | var a8 = 1 * `${ 3 * 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1575,
        ),
        hi: BytePos(
            1588,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:65:14
   |
65 | var b8 = 1 * `2${ 3 * 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1604,
        ),
        hi: BytePos(
            1617,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:66:14
   |
66 | var c8 = 1 * `${ 3 * 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1633,
        ),
        hi: BytePos(
            1647,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:67:14
   |
67 | var d8 = 1 * `2${ 3 * 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1659,
        ),
        hi: BytePos(
            1671,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:68:10
   |
68 | var e8 = `${ 3 * 4 }` * 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1687,
        ),
        hi: BytePos(
            1700,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:69:10
   |
69 | var f8 = `2${ 3 * 4 }` * 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1716,
        ),
        hi: BytePos(
            1729,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:70:10
   |
70 | var g8 = `${ 3 * 4 }5` * 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1745,
        ),
        hi: BytePos(
            1759,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:71:10
   |
71 | var h8 = `2${ 3 * 4 }5` * 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1781,
        ),
        hi: BytePos(
            1793,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:73:14
   |
73 | var a9 = 1 * `${ 3 & 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1809,
        ),
        hi: BytePos(
            1822,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:74:14
   |
74 | var b9 = 1 * `2${ 3 & 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1838,
        ),
        hi: BytePos(
            1851,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:75:14
   |
75 | var c9 = 1 * `${ 3 & 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1867,
        ),
        hi: BytePos(
            1881,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:76:14
   |
76 | var d9 = 1 * `2${ 3 & 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1893,
        ),
        hi: BytePos(
            1905,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:77:10
   |
77 | var e9 = `${ 3 & 4 }` * 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1921,
        ),
        hi: BytePos(
            1934,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:78:10
   |
78 | var f9 = `2${ 3 & 4 }` * 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1950,
        ),
        hi: BytePos(
            1963,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:79:10
   |
79 | var g9 = `${ 3 & 4 }5` * 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1979,
        ),
        hi: BytePos(
            1993,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:80:10
   |
80 | var h9 = `2${ 3 & 4 }5` * 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2015,
        ),
        hi: BytePos(
            2027,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:82:14
   |
82 | var aa = 1 & `${ 3 - 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2043,
        ),
        hi: BytePos(
            2056,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:83:14
   |
83 | var ba = 1 & `2${ 3 - 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2072,
        ),
        hi: BytePos(
            2085,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:84:14
   |
84 | var ca = 1 & `${ 3 - 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2101,
        ),
        hi: BytePos(
            2115,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:85:14
   |
85 | var da = 1 & `2${ 3 - 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2127,
        ),
        hi: BytePos(
            2139,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:86:10
   |
86 | var ea = `${ 3 - 4 }` & 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2155,
        ),
        hi: BytePos(
            2168,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:87:10
   |
87 | var fa = `2${ 3 - 4 }` & 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2184,
        ),
        hi: BytePos(
            2197,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:88:10
   |
88 | var ga = `${ 3 - 4 }5` & 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2213,
        ),
        hi: BytePos(
            2227,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:89:10
   |
89 | var ha = `2${ 3 - 4 }5` & 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2249,
        ),
        hi: BytePos(
            2261,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:91:14
   |
91 | var ab = 1 & `${ 3 * 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2277,
        ),
        hi: BytePos(
            2290,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:92:14
   |
92 | var bb = 1 & `2${ 3 * 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2306,
        ),
        hi: BytePos(
            2319,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:93:14
   |
93 | var cb = 1 & `${ 3 * 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2335,
        ),
        hi: BytePos(
            2349,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:94:14
   |
94 | var db = 1 & `2${ 3 * 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2361,
        ),
        hi: BytePos(
            2373,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:95:10
   |
95 | var eb = `${ 3 * 4 }` & 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2389,
        ),
        hi: BytePos(
            2402,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:96:10
   |
96 | var fb = `2${ 3 * 4 }` & 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2418,
        ),
        hi: BytePos(
            2431,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:97:10
   |
97 | var gb = `${ 3 * 4 }5` & 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2447,
        ),
        hi: BytePos(
            2461,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:98:10
   |
98 | var hb = `2${ 3 * 4 }5` & 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2483,
        ),
        hi: BytePos(
            2495,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:100:14
    |
100 | var ac = 1 & `${ 3 & 4 }`;
    |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2511,
        ),
        hi: BytePos(
            2524,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:101:14
    |
101 | var bc = 1 & `2${ 3 & 4 }`;
    |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2540,
        ),
        hi: BytePos(
            2553,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:102:14
    |
102 | var cc = 1 & `${ 3 & 4 }5`;
    |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2569,
        ),
        hi: BytePos(
            2583,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:103:14
    |
103 | var dc = 1 & `2${ 3 & 4 }5`;
    |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2595,
        ),
        hi: BytePos(
            2607,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:104:10
    |
104 | var ec = `${ 3 & 4 }` & 6;
    |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2623,
        ),
        hi: BytePos(
            2636,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:105:10
    |
105 | var fc = `2${ 3 & 4 }` & 6;
    |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2652,
        ),
        hi: BytePos(
            2665,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:106:10
    |
106 | var gc = `${ 3 & 4 }5` & 6;
    |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2681,
        ),
        hi: BytePos(
            2695,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:107:10
    |
107 | var hc = `2${ 3 & 4 }5` & 6;
    |          ^^^^^^^^^^^^^^

